[refs #110829] Fix spacing under title.

--- a/src/eni/seis/theme/theme-east/css/main.css
+++ b/src/eni/seis/theme/theme-east/css/main.css
@@ -5869,6 +5869,9 @@ body.section-indicators.subsection-indicators-search div#faceted-form div#center
 body.section-indicators.subsection-indicators-search div#faceted-form div#center-and-left-area div#faceted-results {
   margin-top: 10px;
 }
+body.section-indicators.subsection-indicators-search div#faceted-form div#center-and-left-area div#faceted-results div.tileContent {
+  margin-bottom: -30px;
+}
 body.section-indicators.subsection-indicators-search div#faceted-form div#center-and-left-area div#faceted-results div.tileContent h2.tileHeadline a {
   color: #222222;
   font-weight: 500;
