--- a/src/eni/seis/theme/theme-east/src/less/pages/indicators_search.less
+++ b/src/eni/seis/theme/theme-east/src/less/pages/indicators_search.less
@@ -74,6 +74,8 @@ body.section-indicators.subsection-indicators-search {
         margin-top: 10px;
 
         div.tileContent {
+          margin-bottom: -30px;
+
           h2.tileHeadline a {
             color: @color-gray-dark;
             font-weight: 500;
